--- a/.github/workflows/autoBuild.yml
+++ b/.github/workflows/autoBuild.yml
@@ -1,4 +1,7 @@
-name: Build Maven Project
+# This workflow will build and test a Java project with Maven.
+# For more information see: https://help.github.com/actions/language-and-framework-guides/building-and-testing-java-with-maven
+
+name: Build and Test Java with Maven
 
 on:
   pull_request:
